tests/err/unk_id.err
Syntax error at line 5, col 13: Unknown identifier: f2