tests/err/unk_id.avm
; -------------
; exemple.avm -
; -------------

push int32(4f2)

add

push int32(33)


push float(44.55)

mul

push double(42.42)

push int32(42)

dump

pop

assert double(42.42)

push int8(90)
print

exit
